--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "grunt-cli": "^1.2.0",
+    "kunlun": "^0.2.8",
     "moment": "^2.15.1",
     "saucelabs": "^1.2.0",
     "testarmada-magellan": "^8.8.4",
